<resources>
    <string name="app_name">Favor App</string>
    <!-- Strings related to login -->
    <string name="prompt_login">Username or Email</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome, "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >=5 characters</string>
    <string name="registration_failed">"Registration failed"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_favor">FavorActivity</string>
    <string name="title_activity_created_favor">CreatedFavorActivity</string>
    <string name="title_activity_find_favor">CreatedFindActivity</string>
    <string name="channel_name">Favor App notifications</string>
    <string name="channel_description">The default notification channel</string>
    <string name="channel_id">default_channel</string>
    <string-array name="category">
        <item>Home and Cleaning</item>
        <item>Drinks</item>
        <item>Booze Runs</item>
        <item>Grocery delivery</item>
        <item>Food delivery</item>
        <item>Pharmacy delivery</item>
        <item>Pet items</item>
        <item>Stationary and Electronic items</item>
        <item>Quick Snacks and Meals</item>
    </string-array>
</resources>
