<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/topNumber2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:gravity="center"
        android:text="hi"
        android:textSize="60dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="331dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <Button
        android:id="@+id/register"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:layout_gravity="start"
        android:layout_marginTop="60dp"
        android:enabled="true"
        android:text="@string/action_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="331dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="331dp"
        android:layout_height="wrap_content"

        android:hint="@string/prompt_username"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topNumber2" />

</androidx.constraintlayout.widget.ConstraintLayout>