<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <EditText
        android:id="@+id/login_password"
        android:layout_width="331dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="12dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword|textAutoComplete"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username" />

    <Button
        android:id="@+id/login"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:layout_gravity="start"
        android:layout_marginStart="88dp"
        android:layout_marginTop="91dp"
        android:enabled="false"
        android:text="@string/action_sign_in_short"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sign_up"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:layout_gravity="start"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="96dp"
        android:enabled="true"
        android:text="@string/action_sign_up"
        app:layout_constraintBottom_toBottomOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="331dp"
        android:layout_height="wrap_content"

        android:hint="@string/prompt_login"
        android:inputType="textAutoComplete|textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorCreateTextView" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_password"
        app:layout_constraintStart_toStartOf="@+id/register_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/favorCreateTextView"
        android:layout_width="312dp"
        android:layout_height="130dp"
        android:text="Be Kind!"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintBottom_toTopOf="@+id/register_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>